--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,8 +5,16 @@
     <body>
         <h1>My First Website</h1>
         <h2>Written with a little guidance from Moringa School</h2>
-        
+
      <p>Hello, world!</p>
      <p>Welcome to my first webpage! </p>  
+
+     <p>Here are some thimgs i'm going to learn about coding:</p>
+     <ul>
+         <li>HTML</li>
+         <li>CSS</li>
+         <li>JavaScript</li>
+         <li>And a lot more!</li>
+     </ul>
     </body>
 </html>
