--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,10 +4,10 @@
     </head>
     <body>
         <h1>My First Website</h1>
-        <h2>Written with a little guidance from Moringa School</h2>
+        <h2>Written with a little guidance from<em> Moringa School</em></h2>
 
      <p>Hello, world!</p>
-     <p>Welcome to my first webpage! </p>  
+     <p>Welcome to my <strong> first webpage</strong>!</p>  
 
      <p>Here are some thimgs i'm going to learn about coding:</p>
      <ul>
@@ -16,5 +16,7 @@
          <li>JavaScript</li>
          <li>And a lot more!</li>
      </ul>
+     <p>Check out <a href="http://moringaschool.com/">Moringa School</a>.It's a great place to learn web development skills!</p>
+    <img src="elephant.jpg" alt="A photo of an elephant">
     </body>
 </html>
