make chages to my-favorite-things and add a photo

--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-    <h1>Welcome to my favorite things</h1>
+    <h1>Welcome to my <em>favorite things</em></h1>
     </head>
     <body>
-    <p>My bestfriends are:</p>
+    <p>My <strong>bestfriends are:</strong></p>
     <ul>
         <li>Oirere</li>
         <li>Joy</li>
@@ -14,6 +14,8 @@
         <li>Chicken</li>
         <li>Fries</li>
     </ol>
+    <img src="Chips-and-Chicken.jpg" alt="A photo of my best dish">
     <p>Some of my favorite things are like playing video games and travelling</p>
+<p>Check out<a href="http://galitos.com/"> Galitos</a>.They have the best Fries and Chicken!</p>
 </body>
 </html>
