--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>My first webpage!</title>
+        <link href="css/styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <h1>My First Website</h1>
