--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
         <link href="css/styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
+        <div class="unimportant">
         <h1>My First Website</h1>
         <h2>Written with a little guidance from<em> Moringa School</em></h2>
 
      <p>Hello, world!</p>
-     <p>Welcome to my <strong> first webpage</strong>!</p>  
+     <p class="line1">Welcome to my <strong> first webpage</strong>!</p>  
 
-     <p>Here are some thimgs i'm going to learn about coding:</p>
+     <p id="line2">Here are some thimgs i'm going to learn about coding:</p>
+        </div>
      <ul>
+         <div class="important">
          <li>HTML</li>
          <li>CSS</li>
          <li>JavaScript</li>
          <li>And a lot more!</li>
+         </div>
      </ul>
      <p>Check out <a href="http://moringaschool.com/">Moringa School</a>.It's a great place to learn web development skills!</p>
     <img src="elephant.jpg" alt="A photo of an elephant">
