add a paragragh to the page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <h2>Written with a little guidance from<em> Moringa School</em></h2>
 
      <p>Hello, world!</p>
-     <p class="line1">Welcome to my <strong> first webpage</strong>!</p>  
+     <p class="line1">Welcome to my <strong> first webpage</strong>!</p> 
+     <p>I am about to embark on an exciting journey at Moringa school which will be really fun.Im excited to be in Moringa school!</p> 
 
      <p id="line2">Here are some thimgs i'm going to learn about coding:</p>
         </div>
