--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
      <p>Hello, world!</p>
      <p class="line1">Welcome to my <strong> first webpage</strong>!</p> 
-     <p>I am about to embark on an exciting journey at Moringa school which will be really fun.Im excited to be in Moringa school!</p> 
+     <p>I am about to embark on an <span class="wep-page">journey at Moringa school</span> will be really fun.Im excited to be in Moringa school!</p> 
 
      <p id="line2">Here are some thimgs i'm going to learn about coding:</p>
         </div>
